--- a/app/src/main/res/layout/fragment_camera2_basic.xml
+++ b/app/src/main/res/layout/fragment_camera2_basic.xml
@@ -14,26 +14,52 @@
  limitations under the License.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <com.nutritious.camera.AutoFitTextureView
-        android:id="@+id/texture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="-1dp"
-        android:layout_marginTop="-1dp"
-        android:clickable="false" />
+    <TextureView
+            android:id="@+id/texture"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"/>
 
     <RelativeLayout
-        android:id="@+id/control"
+        android:id="@+id/videoLayout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/frame_height"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:background="@color/ic_launcher_background"
+        android:background="#332B2C33"
+        android:padding="8dp">
+
+        <ImageButton
+            android:id="@+id/take_picture"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="145dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="145dp"
+            android:layout_marginBottom="5dp"
+            android:background="#00FFFFFF"
+            android:scaleType="fitCenter"
+            app:srcCompat="@android:drawable/ic_menu_camera" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/photoLayout"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/frame_height"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:background="#2B2C33"
         android:padding="8dp">
 
         <TextView
@@ -41,30 +67,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:gravity="center" />
+            android:gravity="center"
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/tv_confidence"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_item"
-            android:gravity="center" />
+            android:gravity="center"
+            android:visibility="visible" />
 
-<!--        <Button-->
-<!--            android:id="@+id/TakePhoto"-->
-<!--            android:layout_width="109dp"-->
-<!--            android:layout_height="104dp"-->
-<!--            android:layout_alignParentStart="true"-->
-<!--            android:layout_alignParentTop="true"-->
-<!--            android:layout_alignParentEnd="true"-->
-<!--            android:layout_alignParentBottom="true"-->
-<!--            android:layout_marginStart="145dp"-->
-<!--            android:layout_marginTop="5dp"-->
-<!--            android:layout_marginEnd="145dp"-->
-<!--            android:layout_marginBottom="5dp"-->
-<!--            android:background="@drawable/ic_take_photo"-->
-<!--            android:backgroundTint="#7C7777" />-->
+        <ImageButton
+            android:id="@+id/camera_output"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginStart="145dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="145dp"
+            android:layout_marginBottom="5dp"
+            android:background="#00FFFFFF"
+            android:scaleType="fitCenter"
+            app:srcCompat="@android:drawable/alert_dark_frame" />
 
     </RelativeLayout>
 
 </RelativeLayout>
+
