--- a/app/src/main/res/layout/fragment_camera2_basic.xml
+++ b/app/src/main/res/layout/fragment_camera2_basic.xml
@@ -62,22 +62,6 @@
         android:background="#2B2C33"
         android:padding="8dp">
 
-        <TextView
-            android:id="@+id/tv_item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:gravity="center"
-            android:visibility="visible" />
-
-        <TextView
-            android:id="@+id/tv_confidence"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_item"
-            android:gravity="center"
-            android:visibility="visible" />
-
         <ImageButton
             android:id="@+id/camera_output"
             android:layout_width="200dp"
@@ -91,6 +75,54 @@
             app:srcCompat="@android:drawable/alert_dark_frame" />
 
     </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/detectionLayout"
+        android:layout_width="match_parent"
+        android:layout_height="190dp"
+        android:background="#00FFFFFF"
+        android:orientation="vertical"
+        android:visibility="visible">
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="61dp" />
+
+        <TextView
+            android:id="@+id/tv_item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autoText="false"
+            android:freezesText="false"
+            android:gravity="center"
+            android:shadowColor="#000000"
+            android:shadowDx="5"
+            android:shadowDy="5"
+            android:shadowRadius="5"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="#FFFFFF"
+            android:textSize="36sp"
+            android:textStyle="bold"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/tv_confidence"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:shadowColor="#000000"
+            android:shadowDx="5"
+            android:shadowDy="5"
+            android:shadowRadius="5"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="#FFFFFF"
+            android:textSize="36sp"
+            android:textStyle="bold"
+            android:visibility="visible" />
+
+    </LinearLayout>
 
 </RelativeLayout>
 
